Fix spacing

--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -50,5 +50,11 @@ $bd-partners-4: 1130px
     &.bd-is-carbon
       flex-grow: 0
       flex-shrink: 0
-      margin-left: ($main-spacing * 2)
+      margin-left: 1rem
       width: $carbon-width
+
++widescreen
+  .bd-partner
+    &.bd-is-carbon
+      margin-left: 3rem
+
