--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13716,8 +13716,14 @@ svg {
   .bd-partner.bd-is-carbon {
     flex-grow: 0;
     flex-shrink: 0;
-    margin-left: 6rem;
+    margin-left: 1rem;
     width: 300px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .bd-partner.bd-is-carbon {
+    margin-left: 3rem;
   }
 }
 
